--- a/src/App.css
+++ b/src/App.css
@@ -1,71 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Merriweather:100,200,300,300i,400,400i,700');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
-
-.App-header {
-  background-color: #38abb4;
-  height: 180px;
-  padding: 10px;
-  color: white;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-button {
-  border: 0;
-  padding: 10px 15px;
-  margin: 0 2px;
-  border-radius: 2px;
-  font-weight: lighter;
-  letter-spacing: 1px;
-  font-size: 15px;
-  cursor: pointer;
-  background-color: #38abb4;
-  color: #fff;
-  font-weight: 100;
-}
-
-button:active {
-  outline: none;
-}
-.weather__info {
-  padding: 10px 15px;
-  width: 60%;
-  font-size: 20px;
-  font-weight: 200;
-  letter-spacing: 2px;
-}
-
-.weather__key {
-  padding: 10px 15px;
-  color: #000000;
-  border-bottom: solid 2px rgba(255,255,255,0.06);
-  padding: 20px 0 20px 0;
-  font-weight: 400;
-}
-
-.weather__key:last-child {
-  border: 0;
-}
-
-.title-container__title {
-  font-size: 40px;
-  letter-spacing: 2px;
-  line-height: 1.3;
-  font-family: 'Roboto Slab', serif;
-}
-
-.weather__value {
-  color: #38abb4;
-  font-weight: 200;
-}
-
-.weather__error {
-  color: #000000;
-  font-size: 20px;
-  letter-spacing: 1px;
-  font-weight: 200;
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
