--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,41 @@
   padding: 10px;
   color: white;
 }
+.App-background {
+  background-color: #38abb4;
+  width: 100%;
+  bottom:0px; 
+  top: 0px; 
+  height: 840px;
+
+}
+
+.header {
+  color: #fff;
+  background-color: #3b5998;
+}
+
+.header2 {
+  color: #fff;
+  background-color: #dd4b39;
+}
+
+.App-logo2 {
+  animation: App-logo-spin infinite 20s linear;
+  height: 200px;
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 70px;
 }
 
 button {
-  border: 0;
-  padding: 10px 15px;
+  border-top: solid 5px rgba(255,255,255);
+  border-right: solid 5px rgba(255,255,255);
+  border-bottom: solid 2px rgba(255,255,255);
+  border-left: solid 5px rgba(255,255,255);
+  padding: 9px 12px;
   margin: 0 2px;
   border-radius: 2px;
   font-weight: lighter;
@@ -25,10 +51,32 @@ button {
   cursor: pointer;
   background-color: #38abb4;
   color: #fff;
-  font-weight: 100;
+  font-weight: 100; 
+  float: center;
+}
+
+button2 {
+  border-top: solid 5px rgba(255,255,255);
+  border-right: solid 5px rgba(255,255,255);
+  border-bottom: solid 2px rgba(255,255,255);
+  border-left: solid 5px rgba(255,255,255);
+  padding: 9px 12px;
+  margin: 0 2px;
+  border-radius: 2px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 15px;
+  cursor: pointer;
+  background-color: #3B5998;
+  color: #fff;
+  font-weight: 100; 
+  float: center;
 }
 
 button:active {
+  outline: none;
+}
+button2:active {
   outline: none;
 }
 .weather__info {
@@ -69,3 +117,5 @@ button:active {
   letter-spacing: 1px;
   font-weight: 200;
 }
+
+
