--- a/src/Cards.css
+++ b/src/Cards.css
@@ -1,14 +1,31 @@
 .Card-hidden{ 
-    width: 25%; 
-    height: 15%;
+    width: 50%; 
     visibility: hidden;
+    border-color: #38abb4;
 }
 .Card-visible{
-    width: 25%; 
-    height: 15%;
+    width: 60%; 
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    color: #020707;
+    padding: 2% 2%;
+    font-family: "Helvetica Neue";
+    border-radius: 2%;
+    border-top: solid 1.5px #38abb4;
+    border-bottom: solid 1.5px #38abb4;
+    border-left: solid 1.5px #38abb4;
+    border-right: solid 1.5px #38abb4;
+
+}
+
+.rcorners3 {
+    border-radius: 1% 3%;
 }
 
 .BOX { 
     border-top: solid 2px white;
     padding: 7px 5px;
+    text-align: center;
+    color: #38abb4;
+    width: 100%;
 }
