--- a/src/Cards.css
+++ b/src/Cards.css
@@ -25,7 +25,13 @@
 .BOX { 
     border-top: solid 2px white;
     padding: 7px 5px;
+    width: 100%;
+    float: center;
+    display:block;
+    max-width: 500px;
     text-align: center;
     color: #38abb4;
     width: 100%;
+    margin: 0 auto;
+
 }
